[gd_scene load_steps=25 format=3 uid="uid://dnel65w5lg54h"]

[ext_resource type="Script" uid="uid://bko6unrh6xyt5" path="res://Scene/enemie_pig.gd" id="1_o3qc8"]
[ext_resource type="Texture2D" uid="uid://dhrapu3qv3lj8" path="res://Animation/Enemies/Sprites/03-Pig/Attack (34x28).png" id="2_0bstt"]
[ext_resource type="Texture2D" uid="uid://b71njfqbi0jka" path="res://Animation/Enemies/Sprites/03-Pig/Dead (34x28).png" id="3_vbse2"]
[ext_resource type="Texture2D" uid="uid://cde0g1f3ux4yy" path="res://Animation/Enemies/Sprites/03-Pig/Idle (34x28).png" id="4_4l7c7"]
[ext_resource type="Texture2D" uid="uid://d235w6e60e177" path="res://Animation/Enemies/Sprites/03-Pig/Run (34x28).png" id="5_jgcec"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g52ey"]
atlas = ExtResource("2_0bstt")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh3ks"]
atlas = ExtResource("2_0bstt")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq18v"]
atlas = ExtResource("2_0bstt")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddxy8"]
atlas = ExtResource("2_0bstt")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6h4q"]
atlas = ExtResource("2_0bstt")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrhlv"]
atlas = ExtResource("3_vbse2")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbf78"]
atlas = ExtResource("3_vbse2")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lv46"]
atlas = ExtResource("3_vbse2")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5l2y"]
atlas = ExtResource("3_vbse2")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_nino8"]
atlas = ExtResource("4_4l7c7")
region = Rect2(238, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_te2ie"]
atlas = ExtResource("5_jgcec")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2pcj"]
atlas = ExtResource("5_jgcec")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxy1q"]
atlas = ExtResource("5_jgcec")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_v08oe"]
atlas = ExtResource("5_jgcec")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8i5n"]
atlas = ExtResource("5_jgcec")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_15atx"]
atlas = ExtResource("5_jgcec")
region = Rect2(170, 0, 34, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_get7v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g52ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh3ks")
}, {
"duration": 1.01,
"texture": SubResource("AtlasTexture_gq18v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddxy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6h4q")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrhlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbf78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lv46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5l2y")
}],
"loop": false,
"name": &"Damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nino8")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_te2ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2pcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxy1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v08oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8i5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15atx")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5s0o6"]
size = Vector2(14, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_d653x"]
radius = 22.0

[node name="Enemie-pig" type="CharacterBody2D"]
z_index = -1
position = Vector2(41, 85)
collision_layer = 4
collision_mask = 23
script = ExtResource("1_o3qc8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.3841858e-07, -2.3841858e-07)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_get7v")
animation = &"Attack"
autoplay = "Idle"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 5.5)
shape = SubResource("RectangleShape2D_5s0o6")
metadata/_edit_lock_ = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(1, 4)
target_position = Vector2(-11, 0)
collision_mask = 138
metadata/_edit_lock_ = true

[node name="AttackerL" type="RayCast2D" parent="."]
position = Vector2(1, 4)
enabled = false
target_position = Vector2(-14, 0)
metadata/_edit_lock_ = true

[node name="AtackerR" type="RayCast2D" parent="."]
position = Vector2(2, 4)
enabled = false
target_position = Vector2(14, 0)
metadata/_edit_lock_ = true

[node name="DamageL" type="RayCast2D" parent="."]
position = Vector2(2, 4)
target_position = Vector2(-22, 0)
metadata/_edit_lock_ = true

[node name="DamageR" type="RayCast2D" parent="."]
position = Vector2(2, 4)
target_position = Vector2(21, -1)
metadata/_edit_lock_ = true

[node name="PlayerDangerZone" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDangerZone"]
position = Vector2(2, 3)
shape = SubResource("CircleShape2D_d653x")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="PlayerDangerZone" to="." method="_on_player_danger_zone_body_entered"]
